--- a/psiturk/templates/complete.html
+++ b/psiturk/templates/complete.html
@@ -14,10 +14,10 @@
 						<img id="adlogo" src="/static/images/university.png" alt="Lab Logo" />
 			</div>
 			<div class="media-body">
-						<h1>Debugging task complete!</h1>
+						<h1>Task complete!</h1>
 						<hr />
 					    <div class="alert alert-warning">
-					    	If this was a real hit, the data would be saved now and the HIT submitted to AMT.
+                            <a href="https://app.prolific.co/submissions/complete?cc=782B6DAB">Click here to register your completion with Prolific</a> 
 					    </div>
 			</div>
 		</div>
