--- a/psiturk/templates/ad.html
+++ b/psiturk/templates/ad.html
@@ -110,7 +110,7 @@
 									openwindow() function below if you want you experiment
 									to work.
 								-->
-							    <h1>Thank you for accepting this HIT!</h1>
+							    <h1>Thank you for participating!</h1>
 							    <p>
 							    	By clicking the following URL link, you will be taken to the experiment,
 							        including complete instructions and an informed consent agreement.
