--- a/psiturk/templates/complete.html
+++ b/psiturk/templates/complete.html
@@ -17,6 +17,17 @@
 						<h1>Task complete!</h1>
 						<hr />
 					    <div class="alert alert-warning">
+	<script>
+		console.log("exiting full screen");
+
+		if (document.exitFullscreen) {
+			document.exitFullscreen();
+		} else if (document.webkitExitFullscreen) { /* Safari */
+			document.webkitExitFullscreen();
+		} else if (document.msExitFullscreen) { /* IE11 */
+			document.msExitFullscreen();
+		}
+	</script>
                             <a href="https://app.prolific.co/submissions/complete?cc=782B6DAB">Click here to register your completion with Prolific</a> 
 					    </div>
 			</div>
