--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -23,7 +23,7 @@
                 <b>
             </span>
 
-            <div style="width:auto; margin:auto; text-align:center" id="difficulty_slider">
+            <div style="width:auto; margin:auto; text-align:center" id="difficulty_slider_region">
                 <span>How hard was it to track all 4 targets? </span>
                 <br>
                 <input id="difficulty_slider" type="range" min="0" max="100" default="50" style="width:100%; margin:auto;"/>
