--- a/psiturk/static/css/dots_probes.css
+++ b/psiturk/static/css/dots_probes.css
@@ -58,3 +58,18 @@
     border-style: dashed;
     border-color: red;
 }
+
+#polygon_svg {
+    display: inline-block;
+    position: absolute;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
+.polygon {
+    fill: none;
+    stroke: black;
+}
+
