--- a/psiturk/templates/stage.html
+++ b/psiturk/templates/stage.html
@@ -18,7 +18,7 @@
         <div id ="response_region" style="background-color: white; display: none; margin=auto; align-self:center; text-align:center">
             <span id="query">
                 <b>
-                    Select the <span style="color:#e60000">targets <span class="dot" style="background-color:#e60000; position: relative; height: 20px; width: 20px"></span></span>.<br>
+                    0/n <span style="color:#e60000">targets <span class="dot" style="background-color:#e60000; position: relative; height: 20px; width: 20px"> selected</span></span>.<br>
                     <span style="color: gray; display: none" id="probe_reminder">
                         (remember to hit SPACEBAR whenever you see a probe <span class="probe" style="position: relative; opacity: 1.0; height: 10px; width: 10px"></span> during the movement)
                     </span>
