--- a/psiturk/templates/quiz.html
+++ b/psiturk/templates/quiz.html
@@ -32,7 +32,7 @@
                   Which of the following statements is <b>false</b>:
               <select id="trueFalse2" name="constantObj">
                 <option value="noresp" SELECTED></option>
-                <option value="a">You can select targets by clicking or drawing on them with your mouse</option>
+                <option value="a">You can select multiple targets by holding down left mouse key and dragging the cursor over the targets</option>
                 <option value="b">Maintain an arm-length distance from your monitor</option>
                 <option value="c">You can't deselect targets that are already selected</option>
               </select>
